# devproxy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh  justfile
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
.plan/: add-restart-command.md
docs/: releasing.md  spec.md
docs/plans/: 2026-03-08-build-devproxy-test-plan.md  2026-03-08-build-devproxy.md  2026-03-08-ci-cd-pipeline-test-plan.md  2026-03-08-ci-cd-pipeline.md  2026-03-08-install-script-test-plan.md  2026-03-08-install-script.md  2026-03-09-add-restart-command-test-plan.md  2026-03-09-app-named-slugs-test-plan.md  2026-03-09-app-named-slugs.md  2026-03-09-user-daemon-socket-activation-test-plan.md  2026-03-09-user-daemon-socket-activation.md  2026-03-10-custom-slugs-and-docker-compose-commands-test-plan.md  2026-03-10-fix-ca-trust-login-keychain-test-plan.md  2026-03-10-fix-ca-trust-login-keychain.md  2026-03-10-fix-cargo-fmt-test-plan.md  2026-03-10-fix-cargo-fmt.md
plans/: fix-daemon-setup.md
skills/devproxy/: SKILL.md
skills/setup/: SKILL.md
skills/url/: SKILL.md
src/: cli.rs  config.rs  ipc.rs  main.rs  platform.rs  slugs.rs
src/commands/: daemon.rs  down.rs  get_url.rs  init.rs  ls.rs  mod.rs  open.rs  restart.rs  start.rs  status.rs  stop.rs  up.rs  update.rs
src/proxy/: cert.rs  docker.rs  mod.rs  router.rs  socket_activation.rs
tests/: e2e.rs  test_ci_cd.sh  test_install.sh
tests/fixtures/: Dockerfile  docker-compose.yml
tests/linux-docker/: Dockerfile  run-tests.sh  test-listen-fds.sh  test-setcap.sh  test-systemd.sh
(+2 files in other folders)
