[package]
name = "devproxy"
version = "0.4.2"
edition = "2024"

[[bin]]
name = "devproxy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
dirs = "5"
colored = "2"
open = "5"
rand = "0.9"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "server", "client-legacy"] }
http-body-util = "0.1"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
bytes = "1"
time = "0.3"
libc = "0.2"
semver = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tempfile = "3"
